# cpp-microbench

./: .clang-format  .gitignore  CMakeLists.txt  README.md
gen-floats/: CMakeLists.txt  aligned_cont.h  bench_output.h  gen-floats-cstdio-aligned-malloc.c  gen-floats-cstdio-aligned-malloc.cpp  gen-floats-cstdio-malloc.c  gen-floats-fmt-aligned-alloc-array.cpp  gen-floats-fmt-aligned-array.cpp  gen-floats-fmt-aligned-vector.cpp  gen-floats-fmt-array.cpp  gen-floats-fmt-vector.cpp  gen-floats-stream-vector.cpp  main.cpp
read-floats/: CMakeLists.txt  bench_input.h  dynamic_vector.h  read-floats-cstdio-aligned-malloc.c  read-floats-cstdio-malloc.c  read-floats-stream-aligned-array.cpp  read-floats-stream-aligned-vector.cpp  read-floats-stream-array.cpp  read-floats-stream-vector.cpp  trivial_array.h
scripts/gen-floats/: perf-gen-floats.sh
scripts/read-floats/: perf-read-floats.sh
util/: aligned_vector.hpp  alloc_array.hpp  plain_array.hpp  trivial_aligned_array.hpp
